--- a/style.css
+++ b/style.css
@@ -17,5 +17,5 @@ html, body{
     transform: transform(-50%, -50%);
     width: 400px;
     height: 200px;
-    border: 1px solid red;
+    border: 1px solid rgb(0, 255, 55);
 }
